syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message characterSkillLevelUp_toS {
    required int32  CharacterID  = 1;
    required int32  skillID      = 2;
}

message characterSkillLevelUp_toC {}